// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileDocumentHandler applies anchor commit correctly 1`] = `
Object {
  "anchorProof": Object {
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": Object {
    "much": "data",
    "very": "content",
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 1,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler applies commit made using an old key if it is applied within the revocation period 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "much": "data",
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1647037687,
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler applies genesis commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "much": "data",
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler applies signed commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "much": "data",
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "next": Object {
    "content": Object {
      "much": "data",
      "very": "content",
    },
    "metadata": Object {
      "controllers": Array [
        "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
      ],
    },
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler multiple consecutive updates 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "test": "data",
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "next": Object {
    "content": Object {
      "other": Object {
        "obj2": "fefe",
      },
    },
    "metadata": Object {
      "controllers": Array [
        "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
      ],
    },
  },
  "signature": 2,
  "type": 0,
}
`;
